@@ -733,22 +733,31 @@ prefs_notebook_append_page (Gimp          *gimp,
 
   if (notebook_icon)
     {
+      gchar *basename;
       gchar *filename;
 
+      basename = g_strconcat (notebook_icon, ".png", NULL);
       filename = themes_get_theme_file (gimp, "images", "preferences",
-                                        notebook_icon, NULL);
+                                        basename, NULL);
 
       if (g_file_test (filename, G_FILE_TEST_IS_REGULAR))
         pixbuf = gdk_pixbuf_new_from_file (filename, NULL);
-      else
-        pixbuf = NULL;
 
       g_free (filename);
+      g_free (basename);
 
-      if (pixbuf)
+      basename = g_strconcat (notebook_icon, "-22.png", NULL);
+      filename = themes_get_theme_file (gimp, "images", "preferences",
+                                        basename, NULL);
+
+      if (g_file_test (filename, G_FILE_TEST_IS_REGULAR))
+        small_pixbuf = gdk_pixbuf_new_from_file (filename, NULL);
+      else if (pixbuf)
         small_pixbuf = gdk_pixbuf_scale_simple (pixbuf,
-                                                18, 18,
-                                                GDK_INTERP_BILINEAR);
+                                                22, 22, GDK_INTERP_BILINEAR);
+
+      g_free (filename);
+      g_free (basename);
     }
 
   gtk_tree_store_append (tree, iter, parent);
@@ -1403,7 +1412,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Environment"),
-                                     "environment.png",
+                                     "environment",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_ENVIRONMENT,
@@ -1481,7 +1490,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("User Interface"),
-                                     "interface.png",
+                                     "interface",
                                      GTK_TREE_STORE (tree),
                                      _("Interface"),
                                       GIMP_HELP_PREFS_INTERFACE,
@@ -1558,7 +1567,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Theme"),
-                                     "theme.png",
+                                     "theme",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_THEME,
@@ -1661,7 +1670,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Help System"),
-                                     "help-system.png",
+                                     "help-system",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_HELP,
@@ -1712,7 +1721,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Tool Options"),
-                                     "tool-options.png",
+                                     "tool-options",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_TOOL_OPTIONS,
@@ -1798,7 +1807,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Toolbox"),
-                                     "toolbox.png",
+                                     "toolbox",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_TOOLBOX,
@@ -1835,7 +1844,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Default New Image"),
-                                     "new-image.png",
+                                     "new-image",
                                      GTK_TREE_STORE (tree),
                                      _("Default Image"),
                                      GIMP_HELP_PREFS_NEW_IMAGE,
@@ -1873,7 +1882,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Default Image Grid"),
-                                     "default-grid.png",
+                                     "default-grid",
                                      GTK_TREE_STORE (tree),
                                      _("Default Grid"),
                                      GIMP_HELP_PREFS_DEFAULT_GRID,
@@ -1896,7 +1905,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Image Windows"),
-                                     "image-windows.png",
+                                     "image-windows",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_IMAGE_WINDOW,
@@ -1968,7 +1977,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Image Window Appearance"),
-                                     "image-windows.png",
+                                     "image-windows",
                                      GTK_TREE_STORE (tree),
                                      _("Appearance"),
                                      GIMP_HELP_PREFS_IMAGE_WINDOW_APPEARANCE,
@@ -1993,7 +2002,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Image Title & Statusbar Format"),
-                                     "image-title.png",
+                                     "image-title",
                                      GTK_TREE_STORE (tree),
                                      _("Title & Status"),
                                      GIMP_HELP_PREFS_IMAGE_WINDOW_TITLE,
@@ -2118,7 +2127,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Display"),
-                                     "display.png",
+                                     "display",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_DISPLAY,
@@ -2240,7 +2249,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Color Management"),
-                                     "color-management.png",
+                                     "color-management",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_COLOR_MANAGEMENT,
@@ -2323,7 +2332,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Input Devices"),
-                                     "input-devices.png",
+                                     "input-devices",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_INPUT_DEVICES,
@@ -2370,7 +2379,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Additional Input Controllers"),
-                                     "controllers.png",
+                                     "controllers",
                                      GTK_TREE_STORE (tree),
                                      _("Input Controllers"),
                                      GIMP_HELP_PREFS_INPUT_CONTROLLERS,
@@ -2389,7 +2398,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Window Management"),
-                                     "window-management.png",
+                                     "window-management",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_WINDOW_MANAGEMENT,
@@ -2453,7 +2462,7 @@ prefs_dialog_new (Gimp       *gimp,
   vbox = prefs_notebook_append_page (gimp,
                                      GTK_NOTEBOOK (notebook),
                                      _("Folders"),
-                                     "folders.png",
+                                     "folders",
                                      GTK_TREE_STORE (tree),
                                      NULL,
                                      GIMP_HELP_PREFS_FOLDERS,
@@ -2513,47 +2522,47 @@ prefs_dialog_new (Gimp       *gimp,
     }
     paths[] =
     {
-      { N_("Brushes"), N_("Brush Folders"), "folders-brushes.png",
+      { N_("Brushes"), N_("Brush Folders"), "folders-brushes",
         GIMP_HELP_PREFS_FOLDERS_BRUSHES,
         N_("Select Brush Folders"),
         "brush-path", "brush-path-writable" },
-      { N_("Patterns"), N_("Pattern Folders"), "folders-patterns.png",
+      { N_("Patterns"), N_("Pattern Folders"), "folders-patterns",
         GIMP_HELP_PREFS_FOLDERS_PATTERNS,
         N_("Select Pattern Folders"),
         "pattern-path", "pattern-path-writable" },
-      { N_("Palettes"), N_("Palette Folders"), "folders-palettes.png",
+      { N_("Palettes"), N_("Palette Folders"), "folders-palettes",
         GIMP_HELP_PREFS_FOLDERS_PALETTES,
         N_("Select Palette Folders"),
         "palette-path", "palette-path-writable" },
-      { N_("Gradients"), N_("Gradient Folders"), "folders-gradients.png",
+      { N_("Gradients"), N_("Gradient Folders"), "folders-gradients",
         GIMP_HELP_PREFS_FOLDERS_GRADIENTS,
         N_("Select Gradient Folders"),
         "gradient-path", "gradient-path-writable" },
-      { N_("Fonts"), N_("Font Folders"), "folders-fonts.png",
+      { N_("Fonts"), N_("Font Folders"), "folders-fonts",
         GIMP_HELP_PREFS_FOLDERS_FONTS,
         N_("Select Font Folders"),
         "font-path", NULL },
-      { N_("Plug-Ins"), N_("Plug-In Folders"), "folders-plug-ins.png",
+      { N_("Plug-Ins"), N_("Plug-In Folders"), "folders-plug-ins",
         GIMP_HELP_PREFS_FOLDERS_PLUG_INS,
         N_("Select Plug-In Folders"),
         "plug-in-path", NULL },
-      { N_("Scripts"), N_("Script-Fu Folders"), "folders-scripts.png",
+      { N_("Scripts"), N_("Script-Fu Folders"), "folders-scripts",
         GIMP_HELP_PREFS_FOLDERS_SCRIPTS,
         N_("Select Script-Fu Folders"),
         "script-fu-path", NULL },
-      { N_("Modules"), N_("Module Folders"), "folders-modules.png",
+      { N_("Modules"), N_("Module Folders"), "folders-modules",
         GIMP_HELP_PREFS_FOLDERS_MODULES,
         N_("Select Module Folders"),
         "module-path", NULL },
-      { N_("Interpreters"), N_("Interpreter Folders"), "folders-interp.png",
+      { N_("Interpreters"), N_("Interpreter Folders"), "folders-interp",
         GIMP_HELP_PREFS_FOLDERS_INTERPRETERS,
         N_("Select Interpreter Folders"),
         "interpreter-path", NULL },
-      { N_("Environment"), N_("Environment Folders"), "folders-environ.png",
+      { N_("Environment"), N_("Environment Folders"), "folders-environ",
         GIMP_HELP_PREFS_FOLDERS_ENVIRONMENT,
         N_("Select Environment Folders"),
         "environ-path", NULL },
-      { N_("Themes"), N_("Theme Folders"), "folders-themes.png",
+      { N_("Themes"), N_("Theme Folders"), "folders-themes",
         GIMP_HELP_PREFS_FOLDERS_THEMES,
         N_("Select Theme Folders"),
         "theme-path", NULL }
