@@ -9,30 +9,47 @@ PREFS_IMAGES = \
 	default-grid.png		\
 	display.png			\
 	environment.png			\
-	folders.png			\
+	folders-brushes-22.png		\
 	folders-brushes.png		\
+	folders-environ-22.png		\
 	folders-environ.png		\
+	folders-fonts-22.png		\
 	folders-fonts.png		\
+	folders-gradients-22.png	\
 	folders-gradients.png		\
+	folders-interp-22.png		\
 	folders-interp.png		\
+	folders-modules-22.png		\
 	folders-modules.png		\
 	folders-palettes.png		\
+	folders-patterns-22.png		\
 	folders-patterns.png		\
+	folders-plug-ins-22.png		\
 	folders-plug-ins.png		\
+	folders-scripts-22.png		\
 	folders-scripts.png		\
 	folders-themes.png		\
+	folders-tool-plug-ins-22.png	\
 	folders-tool-plug-ins.png	\
+	folders-tools-22.png		\
+	folders.png			\
 	help-system.png			\
 	image-title.png			\
+	image-windows-22.png		\
 	image-windows.png		\
 	input-devices.png		\
+	interface-22.png		\
 	interface.png			\
+	monitor-22.png			\
 	monitor.png			\
 	new-image.png			\
 	session.png			\
+	theme-22.png			\
 	theme.png			\
-	toolbox.png			\
 	tool-options.png		\
+	toolbox-22.png			\
+	toolbox.png			\
+	window-management-22.png	\
 	window-management.png
 
 themedata_DATA = $(PREFS_IMAGES)
